--- a/index.html
+++ b/index.html
@@ -107,6 +107,12 @@
                 <li>
                     G6 - ONE
                 </li>
+		     <li>
+                <a href="https://github.com/codigobenja" target="_blank" class="btn btn-simple"><i class="fa fa-github"></i></a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/benjamin-pr/" target="_blank" class="btn btn-simple"><i class="fa fa-linkedin"></i></a>
+            </li>
             </ul>
         </nav>
         <div class="copyright pull-right">
