--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
                     G6 - ONE
                 </li>
 		     <li>
-                <a href="https://github.com/codigobenja" target="_blank" class="btn btn-simple"><i class="fa fa-github"></i></a>
+                <a href="https://github.com/codigobenja" target="_blank">GitHub</a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/benjamin-pr/" target="_blank" class="btn btn-simple"><i class="fa fa-linkedin"></i></a>
+		    <a href="https://www.linkedin.com/in/benjamin-pr/" target="_blank">LinkedIn</a>
             </li>
             </ul>
         </nav>
