--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
         <div class="collapse navbar-collapse" id="navigation-example-2">
           <ul class="nav navbar-nav navbar-right">
             <li>
-                <a href="https://github.com/codigobenja" target="_blank" class="btn btn-simple"><i class="fa fa-github"></i></a>
+                <a href="https://github.com/codigobenja" target="_blank">GitHub</i></a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/benjamin-pr/" target="_blank" class="btn btn-simple"><i class="fa fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/benjamin-pr/" target="_blank">LinkedIn</a>
             </li>
            </ul>
         </div><!-- /.navbar-collapse -->
