--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                         <label>Código secreto</label>
                                         <br>
                                         <label for="input-texto">Solo letras minúsculas, sin acento</label>
-                                        <textarea class="form-control" name="name" rows="4" placeholder="Ingrese el texto a encriptar aqui..."id="input-texto"></textarea>
+                                        <textarea class="form-control" name="name" rows="4" placeholder="Ingrese el texto a encriptar aqui..."id="input-texto" onkeypress="return SoloLetras(event);" onKeyUP="this.value=this.value.toLowerCase();"></textarea>
                                     </div>
                                     <div class="col-lg-12 col-md-6" id="textoPrevio" style="display: Block;">
                                         <label>Resultado: </label>
@@ -74,7 +74,7 @@
                                     </div>
                                     <div class="col-lg-12 col-md-6" id="mostrarResultado" style="display: none;">
                                         <label>Resultado</label>
-                                        <textarea class="form-control" rows="4" placeholder="Texto resultante..." id="output-texto"></textarea>
+                                        <textarea class="form-control" rows="4" placeholder="Texto resultante..." id="output-texto" disabled></textarea>
                                     </div>
                                 </div>
                                 <div class="row justify-content-md-center">
